# userland

./: buildme
host_applications/linux/: CMakeLists.txt
host_applications/linux/apps/hello_pi/: CMakeLists.txt
host_applications/linux/apps/hello_pi/hello_dispmanx/: CMakeLists.txt  dispmanx.c
host_applications/linux/apps/hwcursor/: CMakeLists.txt  Makefile  hwcursor.c
interface/khronos/common/linux/: khrn_client_platform_linux.c
interface/khronos/egl/: egl_client.c
interface/khronos/glxx/: glxx_client.c
makefiles/cmake/: arm-linux.cmake  vmcs.cmake
